added images and configured paperclip aws sdk

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,6 +9,9 @@
   <strong>Describtion:</strong>
   <%= @topic.describtion %>
 </p>
+<p><%= image_tag @topic.image.url(:medium) %></p>
+
+
 
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
 <%= link_to 'Back', topics_path %>
