--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class="navbar-brand">
-            <i class="fa fa-lg fa-circle">AG</i>
+            <i class="fa fa-lg fa-circle">LiamGram</i>
 
           </div>
         </div>
